autotest-bugfix-extra_spacing

--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -14,6 +14,5 @@
 @media screen and (max-width: 600px) {
   .popup__container {
     max-width: 282px;
-    width: 100%;
   }  
 }
