--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,7 +1,10 @@
 .popup {
   position: fixed;
   z-index: 999;
-  top: 0; left: 0; right: 0; bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
   display: flex;
   align-items: center;
   justify-content: center;
